--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.project_02">
    <application
-        android:label="project_02"
+        android:label="Porti"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
